--- a/src/admin.html
+++ b/src/admin.html
@@ -113,19 +113,19 @@
     </div>
 	
 	<!-- Message Form was submitted successfully-->
-	<div class="modal fade" id="adminModal" tabindex="-1" aria-labelledby="adminModalLabel" aria-hidden="true">
+	<div class="modal fade modalstudent" id="adminModal" tabindex="-1" aria-labelledby="adminModalLabel" aria-hidden="true">
 	  <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
 			<h5 class="modal-title" id="adminModalLabel">Remove <span id="course-remove-title"></span></h5>
-			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			<button type="button" class="btn-close" data-bs-dismiss="modalstudent" aria-label="Close"></button>
 		  </div>
 		  <div class="modal-body">
 			Are you sure you want to remove <span id="course-remove-body"></span>! 
 		  </div>
 		  <div class="modal-footer">
 			<button type="button" class="input-group-btn btn submit-btn ok">Yes<br>Remove</button>
-			<button type="button" class="input-group-btn btn submit-btn cancel" data-bs-dismiss="modal" aria-label="Close">No<br>Keep</button>
+			<button type="button" class="input-group-btn btn submit-btn cancel" data-bs-dismiss="modalstudent" aria-label="Close">No<br>Keep</button>
 		  </div>
 		</div>
 	  </div>
