--- a/src/applicants.html
+++ b/src/applicants.html
@@ -131,19 +131,19 @@
 	</div>
 	
 	<!-- Message Form was submitted successfully-->
-	<div class="modal fade" id="applicantsModal" tabindex="-1" aria-labelledby="applicantsModalLabel" aria-hidden="true">
+	<div class="modal fade modalstudent" id="applicantsModal" tabindex="-1" aria-labelledby="applicantsModalLabel" aria-hidden="true">
 	  <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
 			<h5 class="modal-title" id="applicantsModalLabel">Remove <span id="student-remove-title"></span></h5>
-			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			<button type="button" class="btn-close" data-bs-dismiss="modalstudent" aria-label="Close"></button>
 		  </div>
 		  <div class="modal-body">
 			Are you sure you want to remove <span id="student-remove-body"></span>! 
 		  </div>
 		  <div class="modal-footer">
 			<button type="button" class="input-group-btn btn submit-btn ok">Yes<br>Remove</button>
-			<button type="button" class="input-group-btn btn submit-btn cancel" data-bs-dismiss="modal" aria-label="Close">No<br>Keep</button>
+			<button type="button" class="input-group-btn btn submit-btn cancel" data-bs-dismiss="modalstudent" aria-label="Close">No<br>Keep</button>
 		  </div>
 		</div>
 	  </div>
