--- a/src/admin.html
+++ b/src/admin.html
@@ -14,6 +14,7 @@
     <script src="script/admin/adminfilter.js"></script>
     <script src="script/admin/adminwrite.js"></script>
     <script type="module" src="script/admin/admindatabase.js"></script>
+	<script src="script/redirect.js"></script>
     <title>Dashboard</title>
 </head>
 
