--- a/src/admin.html
+++ b/src/admin.html
@@ -125,8 +125,8 @@
 			Are you sure you want to remove <span id="course-remove-body"></span>! 
 		  </div>
 		  <div class="modal-footer">
-			<button type="button" class="input-group-btn btn submit-btn ok">Yes<br>Remove</button>
-			<button type="button" class="input-group-btn btn submit-btn cancel" data-bs-dismiss="modal" aria-label="Close">No<br>Keep</button>
+			<button type="button" class="btn btn-primary ok">Yes<br>Remove</button>
+			<button type="button" class="btn btn-primary cancel" data-bs-dismiss="modal" aria-label="Close">No<br>Keep</button>
 		  </div>
 		</div>
 	  </div>
