--- a/src/applicants.html
+++ b/src/applicants.html
@@ -124,7 +124,7 @@
 					<iframe id="iframepdf" src="" width="100%" height="580"></iframe>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary" data-number="1">Close</button>
 				</div>
 			</div>
 		</div>
@@ -136,14 +136,15 @@
 		<div class="modal-content">
 		  <div class="modal-header">
 			<h5 class="modal-title" id="applicantsModalLabel">Remove <span id="student-remove-title"></span></h5>
-			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			<button type="button" class="btn-close" data-number="2"" aria-label="Close"></button>
 		  </div>
 		  <div class="modal-body">
 			Are you sure you want to remove <span id="student-remove-body"></span>! 
 		  </div>
 		  <div class="modal-footer">
 			<button type="button" class="btn btn-primary ok">Yes<br>Remove</button>
-			<button type="button" class="btn btn-primary cancel" data-bs-dismiss="modal" aria-label="Close">No<br>Keep</button>
+			 <button class="btn" data-number="2">Close</button>
+			<button type="button" class="btn btn-primary cancel" data-number="2">No<br>Keep</button>
 		  </div>
 		</div>
 	  </div>
