--- a/src/applicants.html
+++ b/src/applicants.html
@@ -20,7 +20,6 @@
 	<script src="script/applicants/applicantswrite.js"></script>
 	<script src="script/applicants/applicantsfilter.js"></script>
 	<script type="module" src="script/applicants/applicantsdatabase.js"></script>
-	<script src="script/redirect.js"></script>
 	<style>
 		body {
 			background-color: whitesmoke;
@@ -124,7 +123,7 @@
 					<iframe id="iframepdf" src="" width="100%" height="580"></iframe>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-number="1">Close</button>
+					<button type="button" class="btn btn-primary course-modal-close">Close</button>
 				</div>
 			</div>
 		</div>
@@ -143,8 +142,7 @@
 		  </div>
 		  <div class="modal-footer">
 			<button type="button" class="btn btn-primary ok">Yes<br>Remove</button>
-			 <button class="btn" data-number="2">Close</button>
-			<button type="button" class="btn btn-primary cancel" data-number="2">No<br>Keep</button>
+			<button type="button" class="btn btn-primary cancel applicants-modal-close">No<br>Keep</button>
 		  </div>
 		</div>
 	  </div>
