--- a/src/applicants.html
+++ b/src/applicants.html
@@ -136,7 +136,7 @@
 		<div class="modal-content">
 		  <div class="modal-header">
 			<h5 class="modal-title" id="applicantsModalLabel">Remove <span id="student-remove-title"></span></h5>
-			<button type="button" class="btn-close" data-number="2"" aria-label="Close"></button>
+			<button type="button" class="btn-close applicants-modal-close" aria-label="Close"></button>
 		  </div>
 		  <div class="modal-body">
 			Are you sure you want to remove <span id="student-remove-body"></span>! 
