--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                     <h5 class="card-header target"><span id="classname">IT 390</span><span class="semester">(<span id="semester">Summer</span>)</span></h5>
                 </a>
                 <div class="card-body collapse" id="collapseOne">
-                    <label class="card-title mt-2 mb-3">Position: </label><span id="position"> Grader</span><br>
+                    <label class="card-title mt-2 mb-3">Position: <span id="position"> Grader</span></label><br>
                     <label class="card-title float-start">Notes: </label>
                     <div class="notes-wrapper welcome-notes">
                         <span id="notes">This is an <b>instructor</b> course to apply for this you must be a
