--- a/src/createposition.html
+++ b/src/createposition.html
@@ -12,6 +12,7 @@
   <script src="script/position/positionprocess.js"></script>
   <script src="script/position/positionsubmit.js"></script>
   <script type="module" src="script/position/positiondatabase.js"></script>
+  <script type="module" src="script/index.js"></script>
   <script src="script/redirect.js"></script>
   <title>Create Position</title>
 </head>
