--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="script/admin/adminfilter.js"></script>
     <script type="module" src="script/welcome/welcomedatabase.js"></script>
+	<script type="module" src="script/index.js"></script>
     <title>Welcome</title>
 </head>
 
