--- a/src/studentform.html
+++ b/src/studentform.html
@@ -15,8 +15,9 @@
   <script src="script/studentform/formiteration.js"></script>
   <script src="script/studentform/formwrite.js"></script>
   <script src="script/studentform/formsubmit.js"></script>
-  <script src="script/redirect.js"></script>
   <script type="module" src="script/studentform/formdatabase.js"></script>
+  <script type="module" src="script/index.js"></script>
+  <script src="script/redirect.js"></script>
   <title>Application</title>
 </head>
 
