--- a/src/applicants.html
+++ b/src/applicants.html
@@ -20,6 +20,7 @@
 	<script src="script/applicants/applicantswrite.js"></script>
 	<script src="script/applicants/applicantsfilter.js"></script>
 	<script type="module" src="script/applicants/applicantsdatabase.js"></script>
+	<script type="module" src="script/index.js"></script>
 	<script src="script/redirect.js"></script>
 	<style>
 		body {
