--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="divider"></div>
     <div class="container-title sticky-top">
-        <h2 class="page-title">Open Positions</h2>
+        <h2 class="page-title">Open Positions test</h2>
         <div>
             <a href="login.html" target="_blank" id="newbutton" value="" class="btn btn-apply float-end">APPLY NOW</a>
         </div>
