submit button design

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -213,7 +213,9 @@
                   You must upload proof of GTA certification or a waiver.
                 </div>
               </div>
-              <br><input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3">
+              <div class="text-center">
+                <br><input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3">
+              </div>
             </form>
             <!-- Message Form was submitted successfully-->
             <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
