--- a/src/studentform.html
+++ b/src/studentform.html
@@ -214,7 +214,7 @@
                 </div>
               </div>
               <div class="text-center">
-                <br><input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3">
+                <br><input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3 px-5">
               </div>
             </form>
             <!-- Message Form was submitted successfully-->
