--- a/src/admin.html
+++ b/src/admin.html
@@ -30,15 +30,15 @@
         <div class="add-button">
             <a id="newbutton" href="createposition.html?new" id="newbutton" value="" class="btn btn-apply float-end">Add Position</a>
         </div>
+        <div>
+            <a id="logout" class="ms-3 btn btn-apply float-end me-0">Logout</a>
+        </div>
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
                 placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
             <span class="btn search-btn float-end" id="advanced-search-button" type="button">
                 <i class="fa fa-search"></i>
             </span>
-        </div>
-        <div>
-            <a id="logout" class="ms-3 btn-apply btn float-end me-0">Logout</a>
         </div>
     </div>
 
