--- a/src/admin.html
+++ b/src/admin.html
@@ -31,7 +31,7 @@
             <a id="newbutton" href="createposition.html?new" id="newbutton" value="" class="btn btn-apply float-end">Add Position</a>
         </div>
         <div>
-            <a id="logout" class="ms-3 btn btn-apply float-end me-0">Logout</a>
+            <a id="logout" class="ms-3 btn btn-apply float-end">Logout</a>
         </div>
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
