--- a/src/applicants.html
+++ b/src/applicants.html
@@ -68,7 +68,7 @@
 	<div class="container-title sticky-top">
 		<h2 class="page-title"> Applicants </h2>
 		<div>
-			<a id="logout" class="ms-3 btn btn-apply float-end me-0">Logout</a>
+			<a id="logout" class="ms-3 btn btn-apply float-end">Logout</a>
 		</div>
 	</div>
 
