--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
                 placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
-            <span class="btn search-btn float-end search-btn" id="advanced-search-button" type="button">
+            <span class="btn search-btn float-end" id="advanced-search-button" type="button">
                 <i class="fa fa-search"></i>
             </span>
         </div>
