--- a/src/applicants.html
+++ b/src/applicants.html
@@ -68,7 +68,7 @@
 	<div class="container-title sticky-top">
 		<h2 class="page-title"> Applicants </h2>
 		<div>
-			<a id="logout" class="ms-3 btn btn-apply float-end">Logout</a>
+			<a id="logout" class="btn btn-apply float-end">Logout</a>
 		</div>
 	</div>
 
@@ -114,7 +114,7 @@
 			</thead>
 			<tbody></tbody>
 		</table>
-		<a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a>
+		<a href="admin.html" class="mt-4 btn btn-back submit-btn "><i class="bi bi-arrow-left float-start"></i></a>
 	</div>
 
 	<div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
