--- a/src/applicants.html
+++ b/src/applicants.html
@@ -55,6 +55,19 @@
 			color: #FFdd00;
 			box-shadow: 3px 3px 3px #FFdd00;
 		}
+
+		.submit-btn{
+ 		 color: white;
+ 		 background-color: #0066cc;
+ 		 font-weight: bolder;
+		}
+
+		.submit-btn:hover{
+		background-color: #FFdd00;
+		border-color: #FFdd00;
+		color:#0066cc;
+		font-weight: bolder;
+		}
 	</style>
 	<title>Applicants</title>
 </head>
