Revert "test button design"
This reverts commit 77d2bc7880993a38f078b465aab1123d0dab4be4.

--- a/src/admin.html
+++ b/src/admin.html
@@ -105,8 +105,8 @@
                     <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn submit-btn"
                         style="height:50px; line-height:35px;">See Applicants</a>
                     <div class="mt-2 open-position-input-group input-group float-end">
-                        <a id="editbutton" href="" value="" class="input-group-btn btn submit-btn btn-3">Edit Notes</a>
-                        <button id="closebutton" value="" class="input-group-btn btn submit-btn btn-3">Close Position</button>
+                        <a id="editbutton" href="" value="" class="input-group-btn btn submit-btn">Edit Notes</a>
+                        <button id="closebutton" value="" class="input-group-btn btn submit-btn">Close Position</button>
                     </div>
                     <br>
                 </div>
