--- a/src/admin.html
+++ b/src/admin.html
@@ -102,11 +102,11 @@
                     <div class="notes-wrapper admin-notes">
                         <span id="notes">None</span>
                     </div>
-                    <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn submit-btn btn-card"
+                    <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn btn-card"
                         style="height:50px; line-height:35px;">See Applicants</a>
                     <div class="mt-2 open-position-input-group input-group float-end">
-                        <a id="editbutton" href="" value="" class="input-group-btn btn submit-btn btn-card">Edit Notes</a>
-                        <button id="closebutton" value="" class="input-group-btn btn submit-btn btn-card">Close Position</button>
+                        <a id="editbutton" href="" value="" class="input-group-btn btn btn-card">Edit Notes</a>
+                        <button id="closebutton" value="" class="input-group-btn btn btn-card">Close Position</button>
                     </div>
                     <br>
                 </div>
