--- a/src/admin.html
+++ b/src/admin.html
@@ -123,11 +123,11 @@
 			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		  </div>
 		  <div class="modal-body">
-			Are you sure you want to remove <span id="course-remove-body"></span>! 
+			Are you sure you want to remove <span id="course-remove-body"></span>? 
 		  </div>
 		  <div class="modal-footer">
-			<button type="button" class="btn btn-primary ok">Yes<br>Remove</button>
-			<button type="button" class="btn btn-primary cancel" data-bs-dismiss="modal" aria-label="Close">No<br>Keep</button>
+			<button type="button" class="btn btn-primary ok">Yes</button>
+			<button type="button" class="btn btn-primary cancel" data-bs-dismiss="modal" aria-label="Close">No</button>
 		  </div>
 		</div>
 	  </div>
