--- a/src/applicants.html
+++ b/src/applicants.html
@@ -25,6 +25,7 @@
 	<style>
 		body {
 			background-color: whitesmoke;
+			color: #044c7c;
 		}
 
 		.container {
@@ -110,7 +111,7 @@
 
 	<div class="applicant-container container applicantspage my-5" style="width:80%">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
-			<h3><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
+			<h3 class="mb-4"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
 			<thead>
 				<tr>
 					<th>Student Id</th>
@@ -153,11 +154,11 @@
 			<button type="button" class="btn-close applicants-modal-close" aria-label="Close"></button>
 		  </div>
 		  <div class="modal-body">
-			Are you sure you want to remove <span id="student-remove-body"></span>! 
+			Are you sure you want to remove <span id="student-remove-body"></span>? 
 		  </div>
 		  <div class="modal-footer">
-			<button type="button" class="btn btn-primary ok">Yes<br>Remove</button>
-			<button type="button" class="btn btn-primary cancel applicants-modal-close">No<br>Keep</button>
+			<button type="button" class="btn btn-primary ok">Yes</button>
+			<button type="button" class="btn btn-primary cancel applicants-modal-close">No</button>
 		  </div>
 		</div>
 	  </div>
