applicants table design improvement

--- a/src/applicants.html
+++ b/src/applicants.html
@@ -38,7 +38,6 @@
 			margin-top: none !important;
 			margin-bottom: 6px !important;
 			max-width: none !important;
-			/* border-collapse: separate !important; */
 			border-spacing: 0;
 		}
 
@@ -126,7 +125,7 @@
 					<th></th>
 				</tr>
 			</thead>
-			<tbody></tbody>
+			<tbody class="mb-4"></tbody>
 		</table>
 		<a href="admin.html" class="mt-4 btn btn-back submit-btn "><i class="bi bi-arrow-left float-start"></i></a>
 	</div>
@@ -146,7 +145,7 @@
 	</div>
 	
 	<!-- Message Form was submitted successfully-->
-	<div class="modal fade" id="applicantsModal" tabindex="-1" aria-labelledby="applicantsModalLabel" aria-hidden="true">
+	<div class="modal fade" id="applicantsModal" tabindex="-1" aria-labelledby="applicantsModalLabel" aria-hidden="true" style="color:black">
 	  <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
