--- a/src/applicants.html
+++ b/src/applicants.html
@@ -146,7 +146,7 @@
 	</div>
 	
 	<!-- Message Form was submitted successfully-->
-	<div class="modal fade" id="applicantsModal" tabindex="-1" aria-labelledby="applicantsModalLabel" aria-hidden="true">
+	<div class="modal fade" id="applicantsModal" tabindex="-1" aria-labelledby="applicantsModalLabel" aria-hidden="true" style="color:black">
 	  <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
