--- a/src/applicants.html
+++ b/src/applicants.html
@@ -86,32 +86,31 @@
 		</div>
 	</div>
 
-	<div class="p-3 card filter card-filter sticky-left">
-		<label class="filter-label">Major:</label>
-		<div class="form-check" id="major">
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-					value="CS">CS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-					value="IT">IT</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-					value="ECE">ECE</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-					value="EE">EE</label><br>
-		</div>
-		<label class="mt-2 filter-label">Level:</label>
-		<div class="form-check" id="level">
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-					value="BS">BS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-					value="MS">MS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-					value="PhD">PhD</label><br>
-		</div>
-	</div>
-
 	<div class="applicant-container container applicantspage my-5" style="width:80%">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
 			<h3 class="mb-4"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
+			<div class="p-3 card filter card-filter">
+				<label class="filter-label">Major:</label>
+				<div class="form-check" id="major">
+					<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+							value="CS">CS</label><br>
+					<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+							value="IT">IT</label><br>
+					<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+							value="ECE">ECE</label><br>
+					<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+							value="EE">EE</label><br>
+				</div>
+				<label class="mt-2 filter-label">Level:</label>
+				<div class="form-check" id="level">
+					<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+							value="BS">BS</label><br>
+					<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+							value="MS">MS</label><br>
+					<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+							value="PhD">PhD</label><br>
+				</div>
+			</div>
 			<thead>
 				<tr>
 					<th>Student Id</th>
