--- a/src/applicants.html
+++ b/src/applicants.html
@@ -112,21 +112,51 @@
 	<div class="applicant-container container applicantspage my-5" style="width:80%">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
 			<h3 class="mb-4"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
-			<thead>
-				<tr>
-					<th>Student Id</th>
-					<th>Name</th>
-					<th>Email</th>
-					<th>Level</th>
-					<th>Major</th>
-					<th>GPA</th>
-					<th>Hours</th>
-					<th>GTA Status</th>
-					<th>Documents</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody></tbody>
+
+			<div>
+				<div class="p-3 card filter card-filter sticky-left">
+					<label class="filter-label">Major:</label>
+					<div class="form-check" id="major">
+						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+								value="CS">CS</label><br>
+						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+								value="IT">IT</label><br>
+						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+								value="ECE">ECE</label><br>
+						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
+								value="EE">EE</label><br>
+					</div>
+					<label class="mt-2 filter-label">Level:</label>
+					<div class="form-check" id="level">
+						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+								value="BS">BS</label><br>
+						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+								value="MS">MS</label><br>
+						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
+								value="PhD">PhD</label><br>
+					</div>
+				</div>
+				<div>
+					<thead>
+						<tr>
+							<th>Student Id</th>
+							<th>Name</th>
+							<th>Email</th>
+							<th>Level</th>
+							<th>Major</th>
+							<th>GPA</th>
+							<th>Hours</th>
+							<th>GTA Status</th>
+							<th>Documents</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody></tbody>
+				</div>
+
+
+			</div>
+
 		</table>
 		<a href="admin.html" class="mt-4 btn btn-back submit-btn "><i class="bi bi-arrow-left float-start"></i></a>
 	</div>
