--- a/src/applicants.html
+++ b/src/applicants.html
@@ -86,35 +86,12 @@
 		</div>
 	</div>
 
-	<div class="p-3 card filter card-filter sticky-left">
-		<label class="filter-label">Major:</label>
-		<div class="form-check" id="major">
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-					value="CS">CS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-					value="IT">IT</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-					value="ECE">ECE</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-					value="EE">EE</label><br>
-		</div>
-		<label class="mt-2 filter-label">Level:</label>
-		<div class="form-check" id="level">
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-					value="BS">BS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-					value="MS">MS</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-					value="PhD">PhD</label><br>
-		</div>
-	</div>
-
 	<div class="applicant-container container applicantspage my-5" style="width:80%">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
 			<h3 class="mb-4"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
 
 			<div>
-				<div class="p-3 card filter card-filter sticky-left">
+				<div class="pe-4 card filter card-filter" style="position:static ; border:none; box-shadow:none">
 					<label class="filter-label">Major:</label>
 					<div class="form-check" id="major">
 						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
@@ -153,12 +130,12 @@
 					</thead>
 					<tbody></tbody>
 				</div>
-
-
 			</div>
 
 		</table>
-		<a href="admin.html" class="mt-4 btn btn-back submit-btn "><i class="bi bi-arrow-left float-start"></i></a>
+		<div>
+			<a href="admin.html" class="mt-4 btn btn-back submit-btn "><i class="bi bi-arrow-left float-start"></i></a>
+		</div>
 	</div>
 
 	<div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
