--- a/src/applicants.html
+++ b/src/applicants.html
@@ -91,17 +91,17 @@
 			<h3 class="mb-4"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
 
 			<div>
-				<div class="pe-4 card filter card-filter" style="position:static ; border:none; box-shadow:none">
+				<div class="pe-4 card filter card-filter" style="position:static ; border:none; box-shadow:none; display: -webkit-inline-box;">
 					<label class="filter-label">Major:</label>
 					<div class="form-check" id="major">
-						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-								value="CS">CS</label><br>
-						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-								value="IT">IT</label><br>
-						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-								value="ECE">ECE</label><br>
-						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj"
-								value="EE">EE</label><br>
+						<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+								value="CS">CS</label>
+						<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+								value="IT">IT</label>
+						<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+								value="ECE">ECE</label>
+						<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+								value="EE">EE</label>
 					</div>
 					<label class="mt-2 filter-label">Level:</label>
 					<div class="form-check" id="level">
