--- a/src/applicants.html
+++ b/src/applicants.html
@@ -92,25 +92,25 @@
 
 			<div>
 				<div class="pe-4 card filter card-filter" style="position:static ; border:none; box-shadow:none; display: -webkit-inline-box;">
-					<label class="filter-label">Major:</label>
+					<label class="filter-label pe-3">Major:</label>
 					<div class="form-check" id="major">
-						<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+						<label class="checkbox form-check-label pe-2"><input class="form-check-input pe-4" type="checkbox" name="maj"
 								value="CS">CS</label>
-						<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+						<label class="checkbox form-check-label pe-2"><input class="form-check-input pe-4" type="checkbox" name="maj"
 								value="IT">IT</label>
-						<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+						<label class="checkbox form-check-label pe-2"><input class="form-check-input pe-4" type="checkbox" name="maj"
 								value="ECE">ECE</label>
-						<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+						<label class="checkbox form-check-label pe-2"><input class="form-check-input pe-4" type="checkbox" name="maj"
 								value="EE">EE</label>
 					</div>
-					<label class="mt-2 filter-label">Level:</label>
+					<label class="ps-3 filter-label pe-3">Level:</label>
 					<div class="form-check" id="level">
-						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-								value="BS">BS</label><br>
-						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-								value="MS">MS</label><br>
-						<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev"
-								value="PhD">PhD</label><br>
+						<label class="checkbox form-check-label pe-2"><input class="form-check-input pe-4" type="checkbox" name="lev"
+								value="BS">BS</label>
+						<label class="checkbox form-check-label pe-2"><input class="form-check-input pe-4" type="checkbox" name="lev"
+								value="MS">MS</label>
+						<label class="checkbox form-check-label pe-2"><input class="form-check-input pe-4" type="checkbox" name="lev"
+								value="PhD">PhD</label>
 					</div>
 				</div>
 				<div>
