--- a/src/applicants.html
+++ b/src/applicants.html
@@ -88,29 +88,34 @@
 
 	<div class="applicant-container container applicantspage my-5" style="width:80%">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
-			<h3 class="mb-4"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
+			<h3 class="mb-3"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
 
 			<div>
-				<div class="pe-4 card filter card-filter" style="position:static ; border:none; box-shadow:none; display: -webkit-inline-box;">
-					<label class="filter-label pe-3">Major:</label>
-					<div class="form-check" id="major">
-						<label class="checkbox form-check-label pe-4"><input class="form-check-input" type="checkbox" name="maj"
-								value="CS">CS</label>
-						<label class="checkbox form-check-label pe-4"><input class="form-check-input" type="checkbox" name="maj"
-								value="IT">IT</label>
-						<label class="checkbox form-check-label pe-4"><input class="form-check-input" type="checkbox" name="maj"
-								value="ECE">ECE</label>
-						<label class="checkbox form-check-label pe-4"><input class="form-check-input" type="checkbox" name="maj"
-								value="EE">EE</label>
+				<div class="mb-3 pe-4 card filter card-filter" style="position:static ; border:none; box-shadow:none; display: -webkit-inline-box;">
+					<div>
+						<label class="filter-label pe-3">Major:</label>
+						<div class="form-check" id="major">
+							<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+									value="CS">CS</label>
+							<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+									value="IT">IT</label>
+							<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+									value="EE">EE</label>
+							<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="maj"
+									value="ECE">ECE</label>
+						</div>
 					</div>
-					<label class="ps-3 filter-label pe-3">Level:</label>
-					<div class="form-check" id="level">
-						<label class="checkbox form-check-label pe-4"><input class="form-check-input" type="checkbox" name="lev"
-								value="BS">BS</label>
-						<label class="checkbox form-check-label pe-4"><input class="form-check-input" type="checkbox" name="lev"
-								value="MS">MS</label>
-						<label class="checkbox form-check-label pe-4"><input class="form-check-input" type="checkbox" name="lev"
-								value="PhD">PhD</label>
+					
+					<div>
+						<label class="ps-3 filter-label pe-3">Level:</label>
+						<div class="form-check" id="level">
+							<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="lev"
+									value="BS">BS</label>
+							<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="lev"
+									value="MS">MS</label>
+							<label class="checkbox form-check-label pe-5"><input class="form-check-input" type="checkbox" name="lev"
+									value="PhD">PhD</label>
+						</div>
 					</div>
 				</div>
 				<div>
