--- a/src/applicants.html
+++ b/src/applicants.html
@@ -89,8 +89,8 @@
 		</div>
 	</div>
 
-	<div class="applicant-container container applicantspage my-5" style="width:80%">
-		<table class="table table-striped display nowrap" id="sortTable" style="max-width:100%">
+	<div class="applicant-container container applicantspage my-5" style="max-width:80%">
+		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
 			<h3 class="mb-3"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
 
 			<div>
