--- a/src/applicants.html
+++ b/src/applicants.html
@@ -95,7 +95,7 @@
 
 			<div>
 				<div class="mb-3 pe-4 card filter card-filter" style="position:static ; border:none; box-shadow:none; display: -webkit-inline-box;">
-					<div style="display: inline-flex;">
+					<div class="filter-phone" style="display: inline-flex;">
 						<label class="filter-label pe-3">Major:</label>
 						<div class="form-check" id="major">
 							<label class="checkbox form-check-label pad"><input class="form-check-input" type="checkbox" name="maj"
@@ -109,7 +109,7 @@
 						</div>
 					</div>
 					
-					<div style="display:inline-flex ;">
+					<div class="filter-phone" style="display:inline-flex ;">
 						<label class="ps-3 filter-label pe-3">Level:</label>
 						<div class="form-check" id="level">
 							<label class="checkbox form-check-label pad"><input class="form-check-input" type="checkbox" name="lev"
