--- a/src/applicants.html
+++ b/src/applicants.html
@@ -89,7 +89,7 @@
 		</div>
 	</div>
 
-	<div class="applicant-container container applicantspage my-5">
+	<div class="applicant-container container applicantspage my-5" style="font-size: 90%;">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
 			<h3 class="mb-3"><span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h3>
 
