remove welcome new tab

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <div class="container-title sticky-top">
         <h2 class="page-title">Open Positions</h2>
         <div>
-            <a href="login.html" target="_blank" id="newbutton" value="" class="btn btn-apply float-end">APPLY NOW</a>
+            <a href="login.html" id="newbutton" value="" class="btn btn-apply float-end">APPLY NOW</a>
         </div>
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
