--- a/src/studentform.html
+++ b/src/studentform.html
@@ -166,7 +166,7 @@
 
               <div>
                 <fieldset class="field_set">
-                  <legend id="courseslegend">Courses (choose of up to 5):</legend>
+                  <legend id="courseslegend">Courses (select up to 5):</legend>
                   <div id="graderlist" class="control-group course-form-control">
                   </div>
                   <div id="lablist" class="control-group course-form-control" hidden>
